--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loadable": "^5.5.0",
     "react-otp-input": "^3.1.1",
