--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_PROJECT_ID=373a8744ceaac00934aec708a3fceea6
-VITE_NODE_TYPE=nexus-goerli
+VITE_NODE_TYPE="nexus-goerli"
 VITE_TWITTER_CLIENT_ID = eGQtUDNsTjIxbktrVWdaUzRzbU86MTpjaQ
