--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethers": "~5.7.0",
     "framer-motion": "^11.0.6",
     "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
+    "@types/numeral": "^2.0.5",
     "@types/qs": "^6.9.12",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
