--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 NODE_ENV = production
+VITE_NODE_TYPE="nexus-goerli"
 VITE_TWITTER_CLIENT_ID = eGQtUDNsTjIxbktrVWdaUzRzbU86MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://goerli.app.zklink.io/aggregation-parade
