--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = development
+VITE_NODE_TYPE="nexus"
 VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
