feat: update invite api

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV = production
-VITE_NODE_TYPE="nexus"
+VITE_NODE_TYPE="nexus-goerli"
 VITE_TWITTER_CLIENT_ID = SGVQdUd6V0RTd1luUmw0QURhTEI6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://goerli.app.zklink.io/aggregation-parade
