--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,7 @@
 NODE_ENV = development
 VITE_NODE_TYPE="nexus"
-VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,RThINUVuNm9XdGFKVUpvejU1bFU6MTpjaQ
-VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
+# VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,RThINUVuNm9XdGFKVUpvejU1bFU6MTpjaQ
+# VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
+
+VITE_TWITTER_CLIENT_ID = eGQtUDNsTjIxbktrVWdaUzRzbU86MTpjaQ
+VITE_TWITTER_CALLBACK_URL = https://test.app.zklink.io/aggregation-parade
