add twitter main accounts widget to 38/40

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-NODE_ENV = development
+VITE_ENV = production
 VITE_NODE_TYPE="nexus"
-VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,RThINUVuNm9XdGFKVUpvejU1bFU6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,eFVmRGpWTEtMbGxjUGE2Y09KdHM6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ
+VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,RThINUVuNm9XdGFKVUpvejU1bFU6MTpjaQ,eFVmRGpWTEtMbGxjUGE2Y09KdHM6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
 
 # For: test.app.zklink.io
