fix: Fixed modal style

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_ENV = development
-VITE_NODE_TYPE="nexus"
+VITE_NODE_TYPE="nexus-goerli"
 VITE_TWITTER_CLIENT_ID = eGQtUDNsTjIxbktrVWdaUzRzbU86MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://test.app.zklink.io/aggregation-parade
 
