--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_ENV = development
-VITE_NODE_TYPE="nexus-goerli"
+VITE_NODE_TYPE="nexus"
 VITE_TWITTER_CLIENT_ID = QWpDMDlpX0VuZ0hEdUFDdEFTaUY6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://goerli.app.zklink.io/aggregation-parade
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
