--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
