--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bignumber.js": "^9.1.2",
     "classnames": "^2.5.1",
     "ethers": "~5.7.0",
-    "framer-motion": "^11.0.6",
+    "framer-motion": "10.12.16",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
