build: update env config for api base url

--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ VITE_NODE_TYPE="nexus"
 VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,RThINUVuNm9XdGFKVUpvejU1bFU6MTpjaQ,eFVmRGpWTEtMbGxjUGE2Y09KdHM6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
+VITE_API_BASE_URL = https://app-api.zklink.io
