--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethers": "~5.7.0",
     "framer-motion": "10.12.16",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
     "react": "^18.2.0",
