--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ VITE_TWITTER_CLIENT_ID = QWpDMDlpX0VuZ0hEdUFDdEFTaUY6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://goerli.app.zklink.io/aggregation-parade
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
 VITE_API_BASE_URL = https://goerli.app.zklink.io
-# VITE_NODE_TYPE="nexus"
-# VITE_API_BASE_URL = https://app-api.zklink.io
+VITE_NODE_TYPE="nexus"
+VITE_API_BASE_URL = https://app-api.zklink.io
