--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,5 @@ VITE_TWITTER_CLIENT_ID = UWlzSnJfQlVzdzlNc1c3ckdpY0U6MTpjaQ,RThINUVuNm9XdGFKVUpv
 VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
 VITE_API_BASE_URL = https://app-api.zklink.io
+VITE_NODE_TYPE="nexus-goerli"
+VITE_API_BASE_URL = https://goerli.app.zklink.io
