--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 VITE_ENV = development
-VITE_NODE_TYPE="nexus"
-VITE_TWITTER_CLIENT_ID = QWpDMDlpX0VuZ0hEdUFDdEFTaUY6MTpjaQ
-VITE_TWITTER_CALLBACK_URL = https://app.zklink.io/aggregation-parade
+VITE_NODE_TYPE="nexus-goerli"
+VITE_TWITTER_CLIENT_ID = eGQtUDNsTjIxbktrVWdaUzRzbU86MTpjaQ
+VITE_TWITTER_CALLBACK_URL = https://goerli-testing.app.zklink.io/aggregation-parade
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
 VITE_API_BASE_URL = https://goerli.app.zklink.io
 
