--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.1.0",
-    "viem": "2.x",
+    "viem": "^2.9.16",
     "wagmi": "^2.5.7",
     "zksync-web3": "^0.17.1",
     "zustand": "^4.5.2"
