--- a/.env.development
+++ b/.env.development
@@ -6,5 +6,5 @@ VITE_TWITTER_CALLBACK_URL = https://goerli-testing.app.zklink.io/aggregation-par
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
 
 # for mainnet testing
-VITE_NODE_TYPE="nexus"
-VITE_API_BASE_URL = https://app-api.zklink.io
+# VITE_NODE_TYPE="nexus"
+# VITE_API_BASE_URL = https://app-api.zklink.io
