update twitter callback url

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VITE_API_BASE_URL = https://goerli.app.zklink.io
 VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
 
 VITE_TWITTER_CLIENT_ID = QWpDMDlpX0VuZ0hEdUFDdEFTaUY6MTpjaQ
-VITE_TWITTER_CALLBACK_URL = http://localhost:3001/aggregation-parade
+VITE_TWITTER_CALLBACK_URL = https://goerli-testing.app.zklink.io/aggregation-parade
 
 # for mainnet testing
 # VITE_NODE_TYPE="nexus"
