reset env for dev

--- a/.env.development
+++ b/.env.development
@@ -8,5 +8,5 @@ VITE_TWITTER_CLIENT_ID = QWpDMDlpX0VuZ0hEdUFDdEFTaUY6MTpjaQ
 VITE_TWITTER_CALLBACK_URL = https://goerli-testing.app.zklink.io/aggregation-parade
 
 # for mainnet testing
-VITE_NODE_TYPE="nexus"
-VITE_API_BASE_URL = https://app-api.zklink.io
+# VITE_NODE_TYPE="nexus"
+# VITE_API_BASE_URL = https://app-api.zklink.io
