--- a/.env.development
+++ b/.env.development
@@ -6,5 +6,5 @@ VITE_IS_VALID_TWITTER_ACCESS = 0 # 0: not valid, 1: valid
 VITE_API_BASE_URL = https://goerli.app.zklink.io
 
 # for preview test
-# VITE_NODE_TYPE="nexus"
-# VITE_API_BASE_URL = https://app-api.zklink.io
+VITE_NODE_TYPE="nexus"
+VITE_API_BASE_URL = https://app-api.zklink.io
