--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "decimal.js": "^10.4.3",
     "ethers": "~5.7.0",
     "framer-motion": "10.12.16",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
