--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "decimal.js": "^10.4.3",
     "ethers": "~5.7.0",
     "framer-motion": "10.12.16",
+    "i18next": "^23.11.5",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
@@ -35,6 +36,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.0.1",
     "react-loadable": "^5.5.0",
     "react-otp-input": "^3.1.1",
