--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-html-parser": "^2.0.2",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.0.1",
     "react-loadable": "^5.5.0",
@@ -57,6 +58,7 @@
     "@types/qs": "^6.9.12",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-html-parser": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
