add recaptcha for daily rolutte

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VITE_PROJECT_ID=aa1989b48f2f9f37e9e29811f97d58af
 VITE_IS_MAINTENANCE = 0
 VITE_MAINTENANCE_TIPS = 'The website is currently undergoing maintenance to add support for Phase II Upgrading.'
+
+VITE_SITE_KEY="6LcfgBYqAAAAAMWveYEvnQQFNg33AU71GBj60Rwl"
+VITE_SECRET_KEY="6LcfgBYqAAAAAHCFhPK_oiBKNts8JXKRMh9auxxr"
