--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -4,7 +4,7 @@ WORKDIR /zklink-nova-app
 
 ADD . /zklink-nova-app
 
-RUN npm install && npm run build:dev
+RUN yarn && yarn build:dev
 
 FROM 475911326710.dkr.ecr.ap-northeast-1.amazonaws.com/nginx:alpine3.18
 
