--- a/Dockerfile-preview
+++ b/Dockerfile-preview
@@ -4,7 +4,7 @@ WORKDIR /zklink-nova-app
 
 ADD . /zklink-nova-app
 
-RUN npm install && npm run build:preview
+RUN yarn && yarn build:preview
 
 FROM 475911326710.dkr.ecr.ap-northeast-1.amazonaws.com/nginx:alpine3.18
 
